# explorations

./: .gitignore  README.md  VSExInspector.py  vscode_ext_analyzer.sh
tools/devcontainer-wizard/: index.html  manual-test.html  test-basic.js  test-builds.sh  test-runner.html  test-simple.html  test-ui.html  test-wizard.js  wizard-broken.js  wizard.js
tools/devcontainer-wizard/secure-containers/auditor/: README.md
tools/devcontainer-wizard/secure-containers/hardened/: README.md
tools/devcontainer-wizard/secure-containers/isolated/: README.md
tools/devcontainer-wizard/secure-containers/minimal/: README.md
tools/devcontainer-wizard/secure-containers/minimal/.devcontainer/: devcontainer.json
tools/devcontainer-wizard/secure-containers/secure/: README.md
tools/devsec-audit/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  config.yaml  devsec-audit  justfile  pyproject.toml  requirements.txt  setup.py
tools/devsec-audit/core/: __init__.py  cli.py  reporter.py  scanner.py
tools/devsec-audit/modules/: __init__.py  docker_security.py  foundry_security.py  git_security.py  secrets_scanner.py  vscode_security.py
tools/devsec-audit/rules/: docker.yaml  git.yaml  secrets.yaml  vscode.yaml
tools/devsec-audit/tests/: __init__.py  test_scanner.py
tools/vscode-extension-inspector/: README.md
tools/vscode-extension-inspector/ext_samples/: StevenRutlidge.mnemonic-validator.vsix
tools/vscode-extension-inspector/web/: style.css
vscode/: .gitignore  VSExInspector.py
vscode/ext/: old_VSExInspector.py
vscode/ext/web/: index.html  inspector.js
